8143059: TestUnsafeUnalignedMismatchedAccesses doens't build after 8139891
Use new Unsafe import path

Reviewed-by: roland, thartmann, shade